# Workout-System

./: .gitignore  CMakeLists.txt  DB.sql  README.md  Seed.sql  fitnessGo.db  main.cpp
ASCIIFrames/Jumping Jack/: frame1.txt  frame2.txt
ASCIIFrames/Plank/: frame1.txt
ASCIIFrames/Push-Up/: frame1.txt
ASCIIFrames/Squat/: frame1.txt  frame2.txt
AsciFrames/: main.txt
AsciFrames/Push-Up/: frame2.txt
Model/: CustomList.hpp  Exercise.hpp  Message.hpp  User.hpp  WorkoutPlan.hpp
Service/: AdminService.cpp  AdminService.hpp  AuthService.cpp  AuthService.hpp  ExerciseService.cpp  ExerciseService.hpp  Mappers.cpp  Mappers.hpp  MessageService.cpp  MessageService.hpp  TraineeService.cpp  TraineeService.hpp  TrainerService.cpp  TrainerService.hpp
UI/: AdminUI.hpp  AuthUI.hpp  ExerciseUI.hpp  ScreenData.hpp  TraineeUI.hpp  TrainerUI.hpp  UIHelpers.cpp  UIHelpers.hpp
Utils/: Database.cpp  Database.hpp  MainUtils.hpp  TextFileReader.hpp  tuiUtils.cpp  tuiUtils.hpp
